# oversync

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml  replatform-ci.yml
replatform/: .gitignore  README.md  docker-compose.yml  run-api.ps1  run-client.ps1  run-dev.ps1
replatform/src/OverSync.Api/: OverSync.Api.csproj  OverSync.Api.http  Program.cs  appsettings.Development.json  appsettings.json
replatform/src/OverSync.Api/Properties/: launchSettings.json
replatform/src/OverSync.Api/Security/: ClaimsPrincipalExtensions.cs  JwtOptions.cs  PasswordService.cs  TokenService.cs
replatform/src/OverSync.Contracts/: AuthContracts.cs  SyncContracts.cs
replatform/src/OverSync.Core/: OverSync.Core.csproj  ServiceCollectionExtensions.cs
replatform/src/OverSync.Core/Abstractions/: IBackgroundScheduler.cs  IFileWatcherAdapter.cs  ISecretStore.cs  ISyncApiClient.cs  ISyncEngine.cs  ISyncStateStore.cs
replatform/src/OverSync.Core/Api/: HttpSyncApiClient.cs
replatform/src/OverSync.Core/Models/: EncryptedPayload.cs  FileChunk.cs  SyncErrorEventArgs.cs  TrackedFileState.cs  VaultConfig.cs
replatform/src/OverSync.Core/Scheduling/: TimerBackgroundScheduler.cs
replatform/src/OverSync.Core/Services/: CryptoService.cs  FileChunker.cs  FileDiscovery.cs  FileHasher.cs  RetryPolicy.cs
replatform/src/OverSync.Core/State/: SqliteSyncStateStore.cs
replatform/src/OverSync.Core/Sync/: SyncEngine.cs
replatform/src/OverSync.Core/Watchers/: FileSystemWatcherAdapter.cs
replatform/src/OverSync.Infrastructure/: OverSync.Infrastructure.csproj  ServiceCollectionExtensions.cs
replatform/src/OverSync.Infrastructure/Abstractions/: IChunkStorage.cs  IOverSyncMetadataStore.cs
replatform/src/OverSync.Windows/: App.xaml.cs  Imports.cs  MainWindow.cs  OverSync.Windows.csproj  Package.appxmanifest  Program.cs  app.manifest
replatform/tests/OverSync.Tests/: OverSync.Tests.csproj
scripts/: release.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engine/: encryption.rs  github.rs  mod.rs  neon.rs  p2p.rs  storage.rs  sync.rs  watcher.rs
src/components/: Dashboard.tsx  NavigationRail.tsx  Onboarding.tsx  PeerPairing.tsx
src/theme/: m3.ts
(+32 files in other folders)
